# OmniVoice-Mobile

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  run.sh
.github/workflows/: ci.yml
demo/: clone.html  create_video.py  generate.html  help.html  info.html  install.html  make_screenshots.py
scripts/: bootstrap.sh  install_termux.sh  quantize_model.py
src/: gguf_loader.py  omnivoice_mobile.py
src/omnivoice_mobile/: __init__.py  cli.py  engine.py
utils/: audio_utils.py  lang_map.py
