[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnivoice-mobile"
version = "2.1.0"
description = "Edge TTS for Termux/Android — 150+ Voice Presets, 75+ Languages, Voice Cloning, Russian Default. By kevinriverrrr-sudo"
readme = "README.md"
license = {text = "OVPL-1.0"}
requires-python = ">=3.10"
authors = [
    {name = "kevinriverrrr-sudo", email = "omnivoice-mobile@proton.me"},
]
keywords = [
    "tts", "text-to-speech", "termux", "android", "arm64",
    "voice-cloning", "mobile", "edge-tts", "speech-synthesis",
    "omnivoice", "cli", "offline",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "edge-tts>=6.1.0",
    "aiohttp>=3.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
audio = [
    "pydub>=0.25.1",
]
dev = [
    "pytest>=7.0",
    "pyflakes>=3.0",
]

[project.scripts]
omnivoice = "omnivoice_mobile.cli:main"

[project.urls]
Homepage = "https://github.com/kevinriverrrr-sudo/OmniVoice-Mobile"
Repository = "https://github.com/kevinriverrrr-sudo/OmniVoice-Mobile"
Issues = "https://github.com/kevinriverrrr-sudo/OmniVoice-Mobile/issues"
"Original Project" = "https://github.com/k2-fsa/OmniVoice"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
omnivoice_mobile = ["**/*.json", "**/*.txt"]
